# vision-compare

./: .env  .gitignore  .gitmodules  .pylintrc  README.md  config.json  notes.txt  pyproject.toml  pyrightconfig.json  requirements-common.in  requirements-dev.in  requirements-dev.txt  requirements-pi.txt  requirements.in  requirements.txt  setup.cfg  setup.py
res/: config.json
src/: __init__.py  _environment.py  benchmark.py  definitions.py  detector.py  download_coco.py  tflite_convert.py  train.py  typings.py  utilities.py
src/models/: __init__.py  detector.py  retinanet.py  squeezedet.py  ssd.py  yolo.py
src/models_/: __init__.py  detector.py  retinanet.py  squeezedet.py  ssd.py  ssd_mxnet.py  ssd_tflite.py  ssdv1.py  ssdv2.py  yolo.py
src/typestubs/PIL/: BdfFontFile.pyi  BlpImagePlugin.pyi  BmpImagePlugin.pyi  BufrStubImagePlugin.pyi  ContainerIO.pyi  CurImagePlugin.pyi  DcxImagePlugin.pyi  DdsImagePlugin.pyi  EpsImagePlugin.pyi  ExifTags.pyi  FitsStubImagePlugin.pyi  FliImagePlugin.pyi  FontFile.pyi  FpxImagePlugin.pyi  FtexImagePlugin.pyi  GbrImagePlugin.pyi  GdImageFile.pyi  GifImagePlugin.pyi  GimpGradientFile.pyi  GimpPaletteFile.pyi  GribStubImagePlugin.pyi  Hdf5StubImagePlugin.pyi  IcnsImagePlugin.pyi  IcoImagePlugin.pyi  ImImagePlugin.pyi  Image.pyi  ImageChops.pyi  ImageCms.pyi  ImageColor.pyi  ImageDraw.pyi  ImageDraw2.pyi  ImageEnhance.pyi  ImageFile.pyi  ImageFilter.pyi  ImageFont.pyi  ImageGrab.pyi  ImageMath.pyi  ImageMode.pyi  ImageMorph.pyi  ImageOps.pyi  (+50 more)
src/typestubs/cv2/: __init__.pyi
src/typestubs/easydict/: __init__.pyi
(+219 files in other folders)
